--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
 	</head>
 	<body>
 		<header>
-			<nav>
-				<a href="/goit-markup-hw-01/">
-					WEBSTUDIO
-				</a>
-				<ul>
-					<li><a  href="/goit-markup-hw-01/">Studio</a></li>
-					<li><a  href="/goit-markup-hw-01/">Portfolio</a></li>
-					<li><a  href="/goit-markup-hw-01/">Contacts</a></li>
-				</ul>
-			</nav>
-			<address>
-				<ul>
-					<li>
-						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-					</li>
-					<li>
-						<a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-					</li>
-				</ul>
-			</address>
+			<nav class="nav">
+                <a href="./index.html" class="nav-logo">WEBSTUDIO</a>
+                <ul class="nav-list list">
+                    <li class="nav-list-item">
+                        <a class="nav-list-item-link" href="./index.html" >Studio</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="nav-list-item-link" href="./portfolio.html" >Portfolio</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="nav-list-item-link" href="/goit-markup-hw-02/" >Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="address-list list">
+                <li class="address-list-item">
+                    <a class="address-list-item-link" href="mailto:info@devstudio.com" >info@devstudio.com</a>
+                </li>
+                <li class="address-list-item">
+                    <a class="address-list-item-link" href="tel:+11(000)111-11-11" >+11 (000) 111-11-11</a>
+                </li>
+                </ul>
+            </address>
 		</header>
 		<!--main section-->
 		<main>
