--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Judielyn GO-IT-Markup Homework 1</title>
 		<meta name="description" content="Judielyn GO-IT-Markup Homework">
 		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="./css/styles.css">
 	</head>
 	<body>
 		<header>
