portfolio-index-css-update

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
     <title>Judielyn GO-IT-Markup Homework 2</title>
-		<meta name="description" content="Judielyn GO-IT-Markup Homework">
+		<meta name="description" content="Judielyn GO-IT-Markup Homework 2">
 		<meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
@@ -10,19 +10,22 @@
 	<body>
 		<header>
             <nav class="nav">
-                <a href="./index.html" class="nav-logo">WEBSTUDIO</a>
+                <a href="portfolio.html">
+                    <img class="nav-logo" src="./images/logo.svg"alt="Logo">
+                </a>
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="./index.html" >Studio</a>
+                        <a class="nav-list-item-link" href="index.html" >Studio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="./portfolio.html" >Portfolio</a>
+                        <a class="nav-list-item-link" href="portfolio.html" >Portfolio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="/goit-markup-hw-02/" >Contacts</a>
+                        <a class="nav-list-item-link" href="goit-markup-hw-02/" >Contacts</a>
                     </li>
                 </ul>
             </nav>
+            <br>
             <address class="address">
                 <ul class="address-list list">
                 <li class="address-list-item">
@@ -34,19 +37,21 @@
                 </ul>
             </address>
 		</header>
+        <br>
 		<!--main section-->
 		<main>
             <!--Filters-->
             <section class="section-portfolio">
                 <h2 hidden>Portfolio Filter</h2>
                 <ul class="portfolio-projects-list">
-                    <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >All</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-item-button active-button" type="button" >All</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Web Site</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >App</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Design</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Marketing</button></li>
 			</ul>
             </section>
+            <br>
             <!--Section rows project1  cards-->
             <section class="section-projects1">
                 <h2 hidden>Project1 Lists</h2>
@@ -54,71 +59,105 @@
 					<li class="project1-list-item">
                         <img src="images/row1-project-card1.jpg" alt="Banking App Interface App">
                         <h3>Banking App Interface App</h3>
+                        <br>
                         <p>App</p>
+                        <br>
                     </li>
                     <li class="project1-list-item">
                         <img src="images/row1-project-card2.jpg" alt="Cashless Payment">
                         <h3>Cashless Payment</h3>
+                        <br>
                         <p>Marketing</p>
+                        <br>
                     </li>
+                    <br>
                     <li class="project1-list-item">
+                        <br>
                         <img src="images/row1-project-card3.jpg" alt="Cashless Payment">
+                        <br>
                         <h3>Mediation App</h3>
+                        <br>
                         <p>App</p>
+                        <br>
                     </li>
+                    <br>
 				</ul>
             </section>
+            <br>
             <!--Section rows project2  cards-->
             <section class="section-projects2">
                 <h2 hidden>Project2 Lists</h2>
 				<ul class = "section-projects2-list">
 					<li class="project2-list-item">
                         <img src="images/row2-project-card1.jpg" alt="Taxi Service">
+                        <br>
                         <h3>Taxi Service</h3>
+                        <br>
                         <p>Marketing</p>
+                        <br>
                     </li>
                     <li class="project2-list-item">
                         <img src="images/row2-project-card2.jpg" alt="Screen Illustrations">
+                        <br>
                         <h3>Screen Illustrations</h3>
+                        <br>
                         <p>Design</p>
+                        <br>
                     </li>
                     <li class="project2-list-item">
                         <img src="images/row2-project-card3.jpg" alt="Online Courses">
+                        <br>
                         <h3>Online Courses</h3>
+                        <br>
                         <p>Marketing</p>
+                        <br>
                     </li>
 				</ul>
             </section>
+            <br>
         <!--Section rows project3  cards-->
         <section class="section-projects3">
             <h2 hidden>Project3 Lists</h2>
             <ul class = "section-projects3-list">
                 <li class="project3-list-item">
                     <img src="images/row3-project-card1.jpg" alt="Instagram Stories Concept">
+                    <br>
                     <h3>Instagram Stories Concept</h3>
+                    <br>
                     <p>Design</p>
+                    <br>
                 </li>
                 <li class="project3-list-item">
                     <img src="images/row3-project-card2.jpg" alt="Organic Food">
+                    <br>
                     <h3>Organic Food</h3>
+                    <br>
                     <p>Web Site</p>
+                    <br>
                 </li>
                 <li class="project3-list-item">
                     <img src="images/row3-project-card3.jpg" alt="Fresh Coffe">
+                    <br>
                     <h3>Fresh Coffe</h3>
+                    <br>
                     <p>Web Site</p>
+                    <br>
                 </li>
             </ul>
         </section>
 		</main>	
 			<!--footer section-->
-			<footer>
-				<a href="/goit-markup-hw-02/">
-					WEBSTUDIO
-				</a>
-				<p>Increase the flow of customers and <br>
-				sales for your business with digital <br>
-				marketing & growth solutions.</p>
-			</footer>
+            <br>
+			<footer class="footer">
+                <a href="portfolio.html">
+                    <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
+                </a>
+                <br>
+                <p class="footer-text">
+                    Increase the flow of customers and <br>
+                    sales for your business with digital <br>
+                    marketing & growth solutions.
+                </p>
+                </footer>
 	</body>
 </html>
