--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 <html lang="en">
 	<head>
     <title>Judielyn GO-IT-Markup Homework 1</title>
-		<meta name="description" content="Judielyn GO-IT-Markup Homework">
+		<meta name="description" content="Judielyn GO-IT-Markup Homework 1">
 		<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="./css/styles.css">
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<header>
 			<nav class="nav">
-                <a href="./index.html" class="nav-logo">WEBSTUDIO</a>
+                <a href="index.html"> 
+					<img class="nav-logo" src="./images/logo.svg" alt="Logo">
+				</a>
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="./index.html" >Studio</a>
+                        <a class="nav-list-item-link" href="index.html" >Studio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="./portfolio.html" >Portfolio</a>
+                        <a class="nav-list-item-link" href="portfolio.html" >Portfolio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="/goit-markup-hw-02/" >Contacts</a>
+                        <a class="nav-list-item-link" href="goit-markup-hw-02/" >Contacts</a>
                     </li>
                 </ul>
             </nav>
+			<br>
             <address class="address">
                 <ul class="address-list list">
                 <li class="address-list-item">
@@ -37,7 +40,8 @@
 		<!--main section-->
 		<main>
 			<section class="hero">
-				<h1>Effective Solutions <br> for Your Business</h1>
+				<h1> Effective Solutions <br>
+				for Your Business </h1> 
 				<button type="button">Order Service</button>
 			</section>
 			<!--feature-->
@@ -45,27 +49,34 @@
 				<h2 hidden>Features</h2>
 				<ul>
 					<li>
+						<br>
 						<h3>Strategy</h3>
+						<br>
 						<p> Our goal is to identify the business 
 							<br> problem to walk away with the 
 							<br> perfect and creative solution.
 						</p>
 					</li>
 						<li>
+							<br>
 						<h3>Puntuality</h3>
+						<br>
 						<p>Bring the key message to the 
 							<br> brand's audience for the best price 
 							<br> within the shortest possible time.
 						</p>
 						</li>
 						<li>
+							<br>
 						<h3>Dilegence</h3>
+						<br>
 						<p>Research and confirm brands that 
 							<br>present the strongest digital growth 
 							<br> opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
+						<br>
 						<h3>Technologies</h3>
 						<p>Design practice focused on digital 
 							<br> experiences. We bring forth a
@@ -76,7 +87,9 @@
 			</section>
 			<!--section feature of product-->
 			<section class="product">
+				<br>
 				<h2>What are we doing</h2>
+				<br>
 				<ul>
 					<li>
 						<img src="images/feature1.jpg" alt="product 1">
@@ -115,15 +128,19 @@
 					</li>
 				</ul>
 			</section>
-			<!--footer section-->
-			<footer>
-				<a href="/goit-markup-hw-01/">
-					WEBSTUDIO
-				</a>
-				<p>Increase the flow of customers and <br>
-				sales for your business with digital <br>
-				marketing & growth solutions.</p>
-			</footer>
 		</main>	
+		<!--footer section-->
+		<br>
+		<footer class="footer">
+			<a href="index.html">
+				<p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
+			</a>
+			<br>
+			<p class="footer-text">
+				Increase the flow of customers and <br>
+				sales for your business with digital <br>
+				marketing & growth solutions.
+			</p>
+			</footer>
 	</body>
 </html>
