3 files all commit

--- a/index.html
+++ b/index.html
@@ -34,51 +34,53 @@
                 <li class="address-list-item">
                     <a class="address-list-item-link" href="tel:+11(000)111-11-11" >+11 (000) 111-11-11</a>
                 </li>
+				<br>
                 </ul>
             </address>
 		</header>
 		<!--main section-->
 		<main>
 			<section class="hero">
-				<h1> Effective Solutions <br>
+				<h1 class="hero-text"> Effective Solutions <br>
 				for Your Business </h1> 
 				<button type="button">Order Service</button>
 			</section>
 			<!--feature-->
 			<section class="feature">
-				<h2 hidden>Features</h2>
-				<ul>
-					<li>
+				<h2 hidden class="feature-header-text">Features</h2>
+				<ul class="feature-list list">
+					<li class="feature-list-item">
 						<br>
-						<h3>Strategy</h3>
+						<h3 class="feature-text">Strategy</h3>
 						<br>
-						<p> Our goal is to identify the business 
+						<p class="sub-feature-text"> Our goal is to identify the business 
 							<br> problem to walk away with the 
 							<br> perfect and creative solution.
 						</p>
 					</li>
-						<li>
+						<li class="feature-list-item">
 							<br>
-						<h3>Puntuality</h3>
+						<h3 class="feature-text">Puntuality</h3>
 						<br>
-						<p>Bring the key message to the 
+						<p class="sub-feature-text">Bring the key message to the 
 							<br> brand's audience for the best price 
 							<br> within the shortest possible time.
 						</p>
 						</li>
-						<li>
+						<li class="feature-list-item">
 							<br>
-						<h3>Dilegence</h3>
+						<h3 class="feature-text">Dilegence</h3>
 						<br>
-						<p>Research and confirm brands that 
+						<p class="sub-feature-text">Research and confirm brands that 
 							<br>present the strongest digital growth 
 							<br> opportunities and minimize risk.
 						</p>
 					</li>
-					<li>
+					<li class="feature-list-item">
 						<br>
-						<h3>Technologies</h3>
-						<p>Design practice focused on digital 
+						<h3 class="feature-text">Technologies</h3>
+						<br>
+						<p class="sub-feature-text">Design practice focused on digital 
 							<br> experiences. We bring forth a
 							<br> deep passion for problem-solving.
 						</p>
@@ -88,43 +90,44 @@
 			<!--section feature of product-->
 			<section class="product">
 				<br>
-				<h2>What are we doing</h2>
+				<h2 class="product-header-text">What are we doing</h2>
 				<br>
-				<ul>
-					<li>
-						<img src="images/feature1.jpg" alt="product 1">
+				<ul class="product-list list">
+					<li class="product-list-item">
+						<img class="product-image1" src="images/feature1.jpg" alt="product 1">
 					</li>
-					<li>
-						<img src="images/feature2.jpg" alt="product 2">
+					<li class="product-list-item">
+						<img class= "product-image2" src="images/feature2.jpg" alt="product 2">
 					</li>
-					<li>
-						<img src="images/feature3.jpg" alt="product 3">
+					<li class="product-list-item">
+						<img class="product-image3" src="images/feature3.jpg" alt="product 3">
 					</li>
 				</ul>
 			</section>
 			<!--section team-->
 			<section class="team">
-				<h2>Our Team</h2>
-				<ul>
-					<li>
-						<img src="images/team-image1.jpg" alt="Team Product Designer">
-						<h3>Mark Guerrero</h3>
-						<p>Product Designer</p>
+				<h2 class="team-header-text-title">Our Team</h2>
+				<br>
+				<ul class="team-list list">
+					<li class="team-list-item">
+						<img class="team-image1" src="images/team-image1.jpg" alt="Team Product Designer">
+						<h3 class="team-header-text">Mark Guerrero</h3>
+						<p class="sub-team-header-text">Product Designer</p>
 					</li>
-					<li>
+					<li class="team-list-item">
 						<img src="images/team-image2.jpg" alt="Team Frontend Developer">
-						<h3>Tom Ford</h3>
-						<p>Frontend Developer</p>
+						<h3 class="team-header-text">Tom Ford</h3>
+						<p class="sub-team-header-text">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-list-item">
 						<img src="images/team-image3.jpg" alt="Team Marketing">
-						<h3>Camila Garcia</h3>
-						<p>Marketing</p>
+						<h3 class="team-header-text">Camila Garcia</h3>
+						<p class="sub-team-header-text">Marketing</p>
 					</li>
-					<li>
+					<li class="team-list-item">
 						<img src="images/team-image4.jpg" alt="Team UI Designer">
-						<h3>Daniel Wilson</h3>
-						<p>UI Designer</p>
+						<h3 class="team-header-text">Daniel Wilson</h3>
+						<p class="sub-team-header-text">UI Designer</p>
 					</li>
 				</ul>
 			</section>
