--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
 		<!--main section-->
 		<main>
             <!--Filters-->
-            <section class="section-portfolio">
-                <h2 hidden>Portfolio Filter</h2>
-                <ul class="portfolio-projects-list">
+            <section class="section portfolio">
+                <h2 class="section-portfolio-header-text" hidden>"Portfolio Filter"</h2>
+                <ul class="portfolio-projects-list list">
                     <li class="portfolio-list-item"><button class="portfolio-item-button active-button" type="button" >All</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Web Site</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >App</button></li>
@@ -53,94 +53,90 @@
             </section>
             <br>
             <!--Section rows project1  cards-->
-            <section class="section-projects1">
-                <h2 hidden>Project1 Lists</h2>
-				<ul class = "section-projects1-list">
-					<li class="project1-list-item">
-                        <img src="images/row1-project-card1.jpg" alt="Banking App Interface App">
-                        <h3>Banking App Interface App</h3>
+            <section class="section projects1">
+                <h2 class="section-project1-header-text"hidden>Project1 Lists</h2>
+				<ul class = "section-projects1-list list">
+					<li class="section-project1-list-item">
+                        <img class="section-image-project-row-card" src="images/row1-project-card1.jpg" alt="Banking App Interface App">
+                        <h3 class="section-project-header-text" >Banking App Interface App</h3>
                         <br>
-                        <p>App</p>
-                        <br>
-                    </li>
-                    <li class="project1-list-item">
-                        <img src="images/row1-project-card2.jpg" alt="Cashless Payment">
-                        <h3>Cashless Payment</h3>
-                        <br>
-                        <p>Marketing</p>
+                        <p class="sub-section-project-header-text">App</p>
                         <br>
                     </li>
-                    <br>
-                    <li class="project1-list-item">
+                    <li class="section-project1-list-item">
+                        <img class="section-image-project-row-card" src="images/row1-project-card2.jpg" alt="Cashless Payment">
+                        <h3 class="section-project-header-text">Cashless Payment</h3>
                         <br>
-                        <img src="images/row1-project-card3.jpg" alt="Cashless Payment">
+                        <p class="sub-section-project-header-text">Marketing</p>
+                    </li>
+                    <li class="section-project1-list-item">
                         <br>
-                        <h3>Mediation App</h3>
+                        <img class="section-image-project-row-card" src="images/row1-project-card3.jpg" alt="Cashless Payment">
                         <br>
-                        <p>App</p>
+                        <h3 class="section-project-header-text">Mediation App</h3>
                         <br>
+                        <p class="sub-section-project-header-text">App</p>
                     </li>
                     <br>
 				</ul>
             </section>
-            <br>
             <!--Section rows project2  cards-->
-            <section class="section-projects2">
-                <h2 hidden>Project2 Lists</h2>
+            <section class="section projects2">
+                <h2 class="section-project2-header-text" hidden>Project2 Lists</h2>
 				<ul class = "section-projects2-list">
-					<li class="project2-list-item">
-                        <img src="images/row2-project-card1.jpg" alt="Taxi Service">
+					<li class="section-project2-list-item">
+                        <img class="section-image-project-row-card" src="images/row2-project-card1.jpg" alt="Taxi Service">
                         <br>
-                        <h3>Taxi Service</h3>
+                        <h3 class="section-project-header-text">Taxi Service</h3>
                         <br>
-                        <p>Marketing</p>
-                        <br>
-                    </li>
-                    <li class="project2-list-item">
-                        <img src="images/row2-project-card2.jpg" alt="Screen Illustrations">
-                        <br>
-                        <h3>Screen Illustrations</h3>
-                        <br>
-                        <p>Design</p>
+                        <p class="sub-section-project-header-text">Marketing</p>
                         <br>
                     </li>
-                    <li class="project2-list-item">
-                        <img src="images/row2-project-card3.jpg" alt="Online Courses">
+                    <li class="section-project2-list-item">
+                        <img class="section-image-project-row-card" src="images/row2-project-card2.jpg" alt="Screen Illustrations">
                         <br>
-                        <h3>Online Courses</h3>
+                        <h3 class="section-project-header-text">Screen Illustrations</h3>
                         <br>
-                        <p>Marketing</p>
+                        <p class="sub-section-project-header-text">Design</p>
+                        <br>
+                    </li>
+                    <li class="section-project2-list-item">
+                        <img class="section-image-project-row-card" src="images/row2-project-card3.jpg" alt="Online Courses">
+                        <br>
+                        <h3 class="section-project-header-text">Online Courses</h3>
+                        <br>
+                        <p class="sub-section-project-header-text">Marketing</p>
                         <br>
                     </li>
 				</ul>
             </section>
             <br>
         <!--Section rows project3  cards-->
-        <section class="section-projects3">
-            <h2 hidden>Project3 Lists</h2>
+        <section class="section projects3">
+            <h2 class="section-project3-header-text" hidden>Project3 Lists</h2>
             <ul class = "section-projects3-list">
-                <li class="project3-list-item">
-                    <img src="images/row3-project-card1.jpg" alt="Instagram Stories Concept">
+                <li class="section-project3-list-item">
+                    <img class="section-image-project-row-card" src="images/row3-project-card1.jpg" alt="Instagram Stories Concept">
                     <br>
-                    <h3>Instagram Stories Concept</h3>
+                    <h3 class="section-project-header-text">Instagram Stories Concept</h3>
                     <br>
-                    <p>Design</p>
-                    <br>
-                </li>
-                <li class="project3-list-item">
-                    <img src="images/row3-project-card2.jpg" alt="Organic Food">
-                    <br>
-                    <h3>Organic Food</h3>
-                    <br>
-                    <p>Web Site</p>
+                    <p class="sub-section-project-header-text">Design</p>
                     <br>
                 </li>
-                <li class="project3-list-item">
-                    <img src="images/row3-project-card3.jpg" alt="Fresh Coffe">
+                <li class="section-project3-list-item">
+                    <img class="section-image-project-row-card" src="images/row3-project-card2.jpg" alt="Organic Food">
                     <br>
-                    <h3>Fresh Coffe</h3>
+                    <h3 class="section-project-header-text">Organic Food</h3>
                     <br>
-                    <p>Web Site</p>
+                    <p class="sub-section-project-header-text">Web Site</p>
+                    <br>
+                </li>
+                <li class="section-project3-list-item">
+                    <img class="section-image-project-row-card" src="images/row3-project-card3.jpg" alt="Fresh Coffe">
+                    <br>
+                    <h3 class="section-project-header-text">Fresh Coffe</h3>
+                    <br>
+                    <p class="sub-section-project-header-text">Web Site</p>
                     <br>
                 </li>
             </ul>
