--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>Judielyn GO-IT-Markup Homework 1</title>
 		<meta name="description" content="Judielyn GO-IT-Markup Homework 1">
 		<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" 
+				integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" 
+				crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
-		<header>
+		<header class="header">
 			<nav class="nav">
                 <a href="index.html"> 
 					<img class="nav-logo" src="./images/logo.svg" alt="Logo">
@@ -41,9 +44,9 @@
 		<!--main section-->
 		<main>
 			<section class="hero">
-				<h1 class="hero-text"> Effective Solutions <br>
+				<h1 class="hero-heading"> Effective Solutions <br>
 				for Your Business </h1> 
-				<button type="button">Order Service</button>
+				<button class="hero-cta" type="button">Order Service</button>
 			</section>
 			<!--feature-->
 			<section class="feature">
@@ -111,23 +114,23 @@
 				<ul class="team-list list">
 					<li class="team-list-item">
 						<img class="team-image1" src="images/team-image1.jpg" alt="Team Product Designer">
-						<h3 class="team-header-text">Mark Guerrero</h3>
-						<p class="sub-team-header-text">Product Designer</p>
+						<h3 class="team-header-name">Mark Guerrero</h3>
+						<p class="team-item-position">Product Designer</p>
 					</li>
 					<li class="team-list-item">
 						<img src="images/team-image2.jpg" alt="Team Frontend Developer">
-						<h3 class="team-header-text">Tom Ford</h3>
-						<p class="sub-team-header-text">Frontend Developer</p>
+						<h3 class="team-header-name">Tom Ford</h3>
+						<p class="team-item-position">Frontend Developer</p>
 					</li>
 					<li class="team-list-item">
 						<img src="images/team-image3.jpg" alt="Team Marketing">
-						<h3 class="team-header-text">Camila Garcia</h3>
-						<p class="sub-team-header-text">Marketing</p>
+						<h3 class="team-header-name">Camila Garcia</h3>
+						<p class="team-item-position">Marketing</p>
 					</li>
 					<li class="team-list-item">
 						<img src="images/team-image4.jpg" alt="Team UI Designer">
-						<h3 class="team-header-text">Daniel Wilson</h3>
-						<p class="sub-team-header-text">UI Designer</p>
+						<h3 class="team-header-name">Daniel Wilson</h3>
+						<p class="team-item-position">UI Designer</p>
 					</li>
 				</ul>
 			</section>
