--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
             <section class="section portfolio">
                 <h2 class="section-portfolio-header-text" hidden>"Portfolio Filter"</h2>
                 <ul class="portfolio-projects-list list">
-                    <li class="portfolio-list-item"><button class="portfolio-item-button active-button" type="button" >All</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-item-button-active-button" type="button" >All</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Web Site</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >App</button></li>
                     <li class="portfolio-list-item"><button class="portfolio-item-button" type="button" >Design</button></li>
