hw2 final commit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="description" content="Judielyn GO-IT-Markup Homework 1">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" 
 				integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" 
@@ -63,7 +65,7 @@
 					</li>
 						<li class="feature-list-item">
 							<br>
-						<h3 class="feature-text">Puntuality</h3>
+						<h3 class="feature-text">Punctuality</h3>
 						<br>
 						<p class="sub-feature-text">Bring the key message to the 
 							<br> brand's audience for the best price 
@@ -72,7 +74,7 @@
 						</li>
 						<li class="feature-list-item">
 							<br>
-						<h3 class="feature-text">Dilegence</h3>
+						<h3 class="feature-text">Diligence</h3>
 						<br>
 						<p class="sub-feature-text">Research and confirm brands that 
 							<br>present the strongest digital growth 
