--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,13 @@
     <title>Judielyn GO-IT-Markup Homework 2</title>
 		<meta name="description" content="Judielyn GO-IT-Markup Homework 2">
 		<meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<header>
+		<header class="header">
             <nav class="nav">
                 <a href="portfolio.html">
                     <img class="nav-logo" src="./images/logo.svg" alt="Logo">
